Implementado notificações, login, restauração de sessão e logout permanente

--- a/client/src/app/core/shell/shell.component.html
+++ b/client/src/app/core/shell/shell.component.html
@@ -52,7 +52,7 @@
       >
         <span>Seja bem-vindo(a), {{usuarioAutenticado.nome}}!</span>
 
-        <button (click)="logoutEfetuado()" mat-stroked-button>
+        <button (click)="logoutAcionado()" mat-stroked-button>
           <mat-icon>logout</mat-icon>
           Logout
         </button>
