--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,3 +18,15 @@ mat-error {
 
   margin-top: 5px;
 }
+
+.notificacao-sucesso {
+  --mdc-snackbar-container-color: #ffabf3;
+  --mdc-snackbar-supporting-text-color: #131313;
+  --mat-snack-bar-button-color: #131313;
+}
+
+.notificacao-erro {
+  --mdc-snackbar-container-color: #dd4f4f;
+  --mdc-snackbar-supporting-text-color: #ffffff;
+  --mat-snack-bar-button-color: #ffffff;
+}
