Atualização da estilização da shell e das páginas de autenticação / Implementado tratamento de erros durante o login

--- a/client/src/app/core/shell/shell.component.html
+++ b/client/src/app/core/shell/shell.component.html
@@ -5,7 +5,7 @@
     fixedInViewport
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
-    [opened]="(isHandset$ | async) === false"
+    [opened]="usuarioAutenticado != undefined && (isHandset$ | async) === false"
   >
     <mat-toolbar>
       <span class="d-flex align-items-center gap-2">
@@ -13,14 +13,26 @@
         e-Agenda
       </span>
     </mat-toolbar>
-    <mat-nav-list>
-      <ng-container *ngIf="!usuarioAutenticado">
-        <a *ngFor="let link of links" mat-list-item [routerLink]="link.rota">
-          <mat-icon matListItemIcon>{{ link.icone }}</mat-icon>
-          {{ link.titulo }}
-        </a>
-      </ng-container>
 
+    <mat-nav-list class="auth-nav-list" *ngIf="usuarioAutenticado">
+      <a
+        [matMenuTriggerFor]="menu"
+        mat-list-item
+        class="auth-trigger-menu-opcoes"
+      >
+        <mat-icon matListItemIcon>verified_user</mat-icon>
+        {{ usuarioAutenticado.nome }}
+      </a>
+
+      <mat-menu #menu class="auth-menu-opcoes">
+        <button mat-menu-item class="auth-menu-item" (click)="logoutAcionado()">
+          <mat-icon matListItemIcon>logout</mat-icon>
+          Logout
+        </button>
+      </mat-menu>
+    </mat-nav-list>
+
+    <mat-nav-list>
       <ng-container *ngIf="usuarioAutenticado">
         <a
           *ngFor="let link of authLinks"
@@ -35,7 +47,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" *ngIf="usuarioAutenticado != undefined">
       <button
         *ngIf="isHandset$ | async"
         mat-icon-button
@@ -45,18 +57,6 @@
       >
         <mat-icon aria-label="Ícone ativador da barra lateral">menu</mat-icon>
       </button>
-
-      <span
-        *ngIf="usuarioAutenticado"
-        class="d-flex align-items-center gap-3 ms-auto"
-      >
-        <span>Seja bem-vindo(a), {{usuarioAutenticado.nome}}!</span>
-
-        <button (click)="logoutAcionado()" mat-stroked-button>
-          <mat-icon>logout</mat-icon>
-          Logout
-        </button>
-      </span>
 
       <span
         *ngIf="isHandset$ | async"
