--- a/client/src/app/core/shell/shell.component.scss
+++ b/client/src/app/core/shell/shell.component.scss
@@ -4,9 +4,12 @@
 
 .sidenav {
   width: 250px;
+
   border-radius: 0;
   border: none;
+
   border-right: 1px solid #4e444b;
+
   padding-left: 5px;
   padding-right: 5px;
 }
@@ -15,6 +18,16 @@
   position: sticky;
   top: 0;
   z-index: 1;
+
   background-color: #6b12c5;
+
   border-left: 3px solid transparent;
+}
+
+.auth-trigger-menu-opcoes {
+  background-color: #6b12c5;
+}
+
+.auth-menu-item {
+  min-width: 250px;
 }
