--- a/client/src/app/core/auth/views/login/login.component.html
+++ b/client/src/app/core/auth/views/login/login.component.html
@@ -2,6 +2,7 @@
   <div class="row justify-content-center g-3 mt-2">
     <div class="col col-md-10 col-lg-6">
       <h1 class="display-3">Login de Usuário</h1>
+
       <hr />
 
       <form [formGroup]="form" (submit)="entrar()">
@@ -9,6 +10,7 @@
           <mat-label>Nome de Usuário</mat-label>
           <input
             matInput
+            data-cy="login"
             formControlName="login"
             autocomplete="username"
             placeholder="Ex: JoaoSilva12"
@@ -32,6 +34,7 @@
           <mat-label>Senha</mat-label>
           <input
             matInput
+            data-cy="senha"
             formControlName="senha"
             type="password"
             autocomplete="current-password"
@@ -52,7 +55,13 @@
           </mat-error>
         </mat-form-field>
         <div class="row justify-content-end g-2 gap-2 mt-5">
-          <button type="submit" mat-flat-button class="col-sm-4">
+
+          <button
+            type="submit"
+            data-cy="submit"
+            mat-flat-button
+            class="col-sm-4"
+          >
             <mat-icon matIconPrefix>login</mat-icon>
             Login
           </button>
