--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 @import "bootstrap/scss/bootstrap-reboot";
 @import "bootstrap/scss/bootstrap-grid";
 @import "bootstrap/scss/bootstrap-utilities";
@@ -10,11 +8,11 @@ body {
 }
 body {
   margin: 0;
-  font-family: Montserrat, "Helvetica Neue", sans-serif !important;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 mat-error {
-  font-size: 15px;
+  font-size: 16px;
 
   margin-top: 5px;
 }
@@ -29,4 +27,18 @@ mat-error {
   --mdc-snackbar-container-color: #dd4f4f;
   --mdc-snackbar-supporting-text-color: #ffffff;
   --mat-snack-bar-button-color: #ffffff;
+}
+
+.card-listagem {
+  background-color: #6b12c5 !important;
+}
+
+.botao-editar {
+  background-color: #ffabf3 !important;
+  color: #773e6f !important;
+}
+
+.botao-excluir {
+  background-color: #ffa8a8 !important;
+  color: #6f4b4b !important;
 }
